@@ -4,6 +4,15 @@
 </HEAD>
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
+2002-04-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> lib/Drawable.cpp: Fixed a bunch of bugs related to
+        DrawableCompositeImage, DrawableFont, and inconsistencies
+        discovered by Gimpel lint.
+
+</UL>
+<p>
 2002-04-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
